--- a/submission-webpages/index.html
+++ b/submission-webpages/index.html
@@ -30,8 +30,9 @@
   <h2>Links</h2>
   <ul>
     <li><a href="abstract.html">Abstract</a></li>
-    <li><a target="_blank" href="https://docs.google.com/document/d/1R93C6XVNl6pDwXdOTlAuGolf03njDcPjZosSgq-IqNI/edit">Project Proposal</a> (or in <a target="_blank" href="ProjectProposal.pdf">pdf</a>)</li>
-    <li><a target="_blank" href="https://docs.google.com/document/d/1vO6DxW93JxJRxkcKjanpCkyZUVifivA7fcgbkvjoH-s/edit">Final Report</a> (or in <a target="_blank" href="">pdf</a>)</li>
+    <li><a target="_blank" href="https://docs.google.com/document/d/1R93C6XVNl6pDwXdOTlAuGolf03njDcPjZosSgq-IqNI/edit">Project Proposal</a> (or in <a target="_blank" href="ProjectProposal.pdf">PDF</a>)</li>
+    <li><a target="_blank" href="https://docs.google.com/document/d/1vO6DxW93JxJRxkcKjanpCkyZUVifivA7fcgbkvjoH-s/edit">Final Report</a> (or in <a target="_blank" href="">PDF</a>)</li>
+    <li><a target="_blank" href="https://docs.google.com/presentation/d/1ecSf1qGPYeB12bCDbnHviSjNLNYezb-ev_ImzK-MskA/edit#">Presentation Slides</a> (or in <a target="_blank" href="PresentationSlides.pdf">PDF</a>)</li>
     <li><a target="_blank" href="https://github.com/jautung/quixo490">Code on GitHub</a></li>
   </ul>
 
