--- a/submission-webpages/index.html
+++ b/submission-webpages/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <header><h1>CPSC 490 Project: Game 'Depth' in Quixo</h1></header>
+  <header><h1>CPSC 490 Project: Game &lsquo;Depth&rsquo; in Quixo</h1></header>
   <aside><strong>Author:</strong> Jau Tung Chan (jc3395)</aside>
   <aside><strong>Advisor:</strong> Professor James Glenn</aside>
 
@@ -31,7 +31,7 @@
   <ul>
     <li><a href="abstract.html">Abstract</a></li>
     <li><a target="_blank" href="https://docs.google.com/document/d/1R93C6XVNl6pDwXdOTlAuGolf03njDcPjZosSgq-IqNI/edit">Project Proposal</a> (or in <a target="_blank" href="ProjectProposal.pdf">PDF</a>)</li>
-    <li><a target="_blank" href="https://docs.google.com/document/d/1vO6DxW93JxJRxkcKjanpCkyZUVifivA7fcgbkvjoH-s/edit">Final Report</a> (or in <a target="_blank" href="">PDF</a>)</li>
+    <li><a target="_blank" href="https://docs.google.com/document/d/1vO6DxW93JxJRxkcKjanpCkyZUVifivA7fcgbkvjoH-s/edit">Final Report</a> (or in <a target="_blank" href="FinalReport.pdf">PDF</a>)</li>
     <li><a target="_blank" href="https://docs.google.com/presentation/d/1ecSf1qGPYeB12bCDbnHviSjNLNYezb-ev_ImzK-MskA/edit#">Presentation Slides</a> (or in <a target="_blank" href="PresentationSlides.pdf">PDF</a>)</li>
     <li><a target="_blank" href="https://github.com/jautung/quixo490">Code on GitHub</a></li>
   </ul>
